--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,11 @@ spring:
     hibernate:
       ddl-auto: update
 #  flyway.baseline-on-migrate: true
+
+db-config:
+  pqsl:
+    property: value
+  h2:
+    property: value
+  mongo:
+    property: value
