--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.username=tonya
 spring.datasource.password=estafeta
 spring.flyway.enabled=false
 
+no-sql.mongo.name=local
+no-sql.mongo.host=localhost
+no-sql.mongo.port=27017
+
+spring.profiles.active=test
+
