--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,5 +9,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/spring_boot
 spring.datasource.username=tonya
 spring.datasource.password=estafeta
+
 spring.flyway.enabled=false
 
+spring.profiles.active=test
