--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 ## H2
 spring.datasource.driver-class-name=org.h2.Driver
